scribble-test/src/test/resources/good/efsm/gcontinue/choiceunguarded/Test01b.scr
module good.efsm.gcontinue.choiceunguarded.Test01b;


// Cf. -minfsm
global protocol Proto1(role A, role B)
{
	rec X
	{
		1() from A to B;
		choice at A
		{
			continue X;
		}
		or
		{
			2() from A to B;
			continue X;
		}
	}
}


