scribble-test/src/test/resources/bad/safety/stuckmsg/twoparty/Test04.scr
module bad.safety.stuckmsg.twoparty.Test04;


// Cf. good.wfchoice.enabling.twoparty.Test02
global protocol Proto1(role A, role B)
{
	choice at A
	{
		1() from A to B;
		2() from B to A;
	}
	or
	{
		1() from A to B;
		3() from B to A;
	}
}

